--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.5",
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
