--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.927.0",
     "@dagrejs/dagre": "^1.1.5",
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-slot": "^1.2.3",
